[gd_scene load_steps=28 format=3 uid="uid://b4wit11oooo6r"]

[ext_resource type="Script" path="res://scripts/enemy_3.gd" id="1_ye4nw"]
[ext_resource type="Texture2D" uid="uid://c5gtink7l82pu" path="res://enemy/Lionboy.png" id="2_csago"]
[ext_resource type="Texture2D" uid="uid://tqnv1f7gfi1k" path="res://assets/smoke.png" id="3_6padh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3gcpp"]
atlas = ExtResource("2_csago")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wm12i"]
atlas = ExtResource("2_csago")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx70f"]
atlas = ExtResource("2_csago")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywkkx"]
atlas = ExtResource("2_csago")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bo6v"]
atlas = ExtResource("2_csago")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_exblb"]
atlas = ExtResource("2_csago")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2w3q"]
atlas = ExtResource("2_csago")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_psuqb"]
atlas = ExtResource("2_csago")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cylnc"]
atlas = ExtResource("2_csago")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nylw"]
atlas = ExtResource("2_csago")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_265ra"]
atlas = ExtResource("2_csago")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_snlmb"]
atlas = ExtResource("2_csago")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_voqh1"]
atlas = ExtResource("2_csago")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eg36d"]
atlas = ExtResource("2_csago")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkcac"]
atlas = ExtResource("2_csago")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0055c"]
atlas = ExtResource("2_csago")
region = Rect2(16, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_813mn"]
animations = [{
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gcpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wm12i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx70f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywkkx")
}],
"loop": true,
"name": &"walkDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bo6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exblb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2w3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psuqb")
}],
"loop": true,
"name": &"walkLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cylnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nylw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_265ra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_snlmb")
}],
"loop": true,
"name": &"walkRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_voqh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eg36d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkcac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0055c")
}],
"loop": true,
"name": &"walkUp",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gtil5"]
radius = 8.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4cl2m"]
radius = 8.0
height = 18.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pojoj"]
size = Vector2(43, 41)

[sub_resource type="Animation" id="Animation_2h0je"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("deatheffect:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("deatheffect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_c0jye"]
resource_name = "death"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("deatheffect:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("deatheffect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gmgdf"]
_data = {
"RESET": SubResource("Animation_2h0je"),
"death": SubResource("Animation_c0jye")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2lugv"]
radius = 94.0
height = 192.0

[node name="Enemy4" type="CharacterBody2D"]
z_index = 1
texture_filter = 1
script = ExtResource("1_ye4nw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(2.25, 1)
scale = Vector2(1.34375, 1.375)
sprite_frames = SubResource("SpriteFrames_813mn")
animation = &"walkUp"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 3)
shape = SubResource("CapsuleShape2D_gtil5")

[node name="hitBox" type="Area2D" parent="."]
texture_filter = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitBox"]
position = Vector2(2, 3)
shape = SubResource("CapsuleShape2D_4cl2m")

[node name="hurtbux" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbux"]
position = Vector2(3.5, 4.5)
shape = SubResource("RectangleShape2D_pojoj")

[node name="deatheffect" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -4)
texture = ExtResource("3_6padh")
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gmgdf")
}

[node name="detectionbox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectionbox"]
position = Vector2(2, 3)
shape = SubResource("CapsuleShape2D_2lugv")

[connection signal="area_entered" from="hurtbux" to="." method="_on_hurtbux_area_entered"]
[connection signal="body_entered" from="detectionbox" to="." method="_on_detectionbox_body_entered"]
[connection signal="body_exited" from="detectionbox" to="." method="_on_detectionbox_body_exited"]
